ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tomcat-ingress 
  namespace: ysc
spec:
  rules:
    - host: www.zn.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: tomcat-service
                port:
                  number: 80
